<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp">

    <android.support.v7.widget.CardView
        android:id="@+id/btnLigarCargoX"
        android:layout_width="320dp"
        android:layout_height="66dp"
        android:layout_above="@+id/btnChat"
        android:layout_centerHorizontal="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivLigar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_telephone" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toRightOf="@id/ivLigar">

                <TextView
                    android:id="@+id/tvLigar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_ligue_cargox"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvLigar"
                    android:layout_marginTop="2dp"
                    android:text="@string/telefone_cargox"
                    android:textColor="@android:color/black" />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@drawable/ic_arrow_right" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/btnChat"
        android:layout_width="320dp"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_chat" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toRightOf="@id/ivChat">

                <TextView
                    android:id="@+id/tvChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_fale_conosco"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvChat"
                    android:layout_marginTop="2dp"
                    android:text="@string/texto_chat"
                    android:textColor="@android:color/black" />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@drawable/ic_arrow_right" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>