<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginEnd="4dp"
    android:layout_marginRight="4dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/id_card"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        android:layout_margin="4dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rlTituloEbotoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_calendar"
                    android:gravity="center_vertical"
                    android:text="@string/titulo_card_data_hora"
                    android:textColor="@android:color/black" />

                <android.support.v7.widget.CardView
                    android:id="@+id/cdCTe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@+id/cdAdiant"
                    android:layout_toStartOf="@+id/cdAdiant"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorAccent">

                    <RelativeLayout
                        android:layout_width="56dp"
                        android:layout_height="17dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:text="@string/cte"
                            android:textColor="@android:color/white"
                            android:textSize="10sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            app:srcCompat="@drawable/ic_copyright" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cdAdiant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="#33CC33">

                    <RelativeLayout
                        android:layout_width="56dp"
                        android:layout_height="17dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:text="@string/adiant"
                            android:textColor="@android:color/white"
                            android:textSize="10sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            app:srcCompat="@drawable/ic_cash" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvDataHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlTituloEbotoes"
                android:layout_centerVertical="true"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="DATA - HORA"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/ivMapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDataHora"
                android:src="@drawable/placeholder_map" />

            <TextView
                android:id="@+id/tvTituloColetarEm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivMapa"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_coletar"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_coletar"
                android:gravity="center_vertical"
                android:text="@string/titulo_card_coletar_em"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvRuaNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvDataHora"
                android:layout_alignStart="@+id/tvDataHora"
                android:layout_below="@+id/tvTituloColetarEm"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="Street - Number"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvCidadeEstadoZip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvDataHora"
                android:layout_alignStart="@+id/tvDataHora"
                android:layout_below="@+id/tvRuaNumero"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="Cidade - Estado - ZIP"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvVerDetalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvDataHora"
                android:layout_alignStart="@+id/tvDataHora"
                android:layout_below="@+id/tvCidadeEstadoZip"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/ver_detalhes"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignTop="@+id/btnColetar"
                android:background="@color/colorPrimary" />

            <Button
                android:id="@+id/btnColetar"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvVerDetalhes"
                android:text="@string/vou_coletar"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvDeslizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_hand"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_hand"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/texto_deslizar"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone" />

</LinearLayout>